--- a/src/Translation/DigiToOverlay.txt
+++ b/src/Translation/DigiToOverlay.txt
@@ -4,15 +4,18 @@
 // digis to the overlay output that will be used in overlay jobs
 // Append this to the end of a job options file like readigi_runrecon.txt
 //
-// $Header: /nfs/slac/g/glast/ground/cvs/Overlay/src/Translation/DigiToOverlay.txt,v 1.1 2008/12/01 22:50:12 usher Exp $
+// $Header: /nfs/slac/g/glast/ground/cvs/Overlay/src/Translation/DigiToOverlay.txt,v 1.2 2011/06/27 17:45:57 usher Exp $
 
 // Include the Overlay package library
 ApplicationMgr.DLLs+= { "Overlay"};
 
 // Include the Overlay output service which will make sure file is output
-ApplicationMgr.ExtSvc += {"OverlayDataSvc"};
+ApplicationMgr.ExtSvc += { "OverlayCnvSvc", 
+                           "EvtPersistencySvc/OverlayPersistencySvc" , 
+                           "OverlayDataSvc/OverlayOutputSvc" };
 
-OverlayDataSvc.ConfigureForOutput = true;
+OverlayPersistencySvc.CnvServices   = { "OverlayCnvSvc" };
+OverlayOutputSvc.ConfigureForOutput = true;
 
 // Replace the Output sequencer members with just this one algorithm
 Output.Members = { "DigiToOverlayAlg" };
